kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: conduit
  namespace: conduit
  labels:
    name: conduit
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: conduit
  type: NodePort
